--- a/canary-ingress.yaml
+++ b/canary-ingress.yaml
@@ -8,7 +8,7 @@ metadata:
     ingress.kubernetes.io/app-root: /
 spec:
   rules:
-  - host: canary.dev.argoproj.io
+  - host: denis-sandbox.pipeline-team.cf-cd.com
     http:
       paths:
       - path: /
