--- a/canary-rollout.yaml
+++ b/canary-rollout.yaml
@@ -17,7 +17,7 @@ spec:
         - name: canary-demo
           #image: idanarbel/rollouts-demo:purple
           #image: idanarbel/rollouts-demo:green
-          image: deniscodefresh/rollouts-demo:green
+          image: deniscodefresh/rollouts-demo:red
           imagePullPolicy: Always
           ports:
             - name: http
